[gd_scene load_steps=7 format=2]

[ext_resource path="res://battle/battle.gd" type="Script" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/enemy_types/slime/slime-battle.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/tileset.tres" type="MeshLibrary" id=4]

[sub_resource type="Curve3D" id=3]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -6.99892, 1.03537, -5.299, 0, 0, 0, 0, 0, 0, -19.9833, 0.931293, -5.45731, 0, 0, 0, 0, 0, 0, -21.3934, 1.31827, 10.972, 0, 0, 0, 0, 0, 0, 22.376, 1.46252, 10.1401, 0, 0, 0, 0, 0, 0, 22.6922, 2.13866, 2.39474, 0, 0, 0, 0, 0, 0, 22.7562, 2.54433, -5.2201, 0, 0, 0, 0, 0, 0, -8.21513, 2.54433, -4.90015 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Environment" id=4]
ambient_light_color = Color( 0.517647, 0.333333, 0.466667, 1 )

[node name="Battle" type="Node"]
script = ExtResource( 1 )
battle_enemy_scene = ExtResource( 3 )
level_name = "zero"

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, -0.0338917, 16.5385, 33.4831 )

[node name="SpawnPath" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20.5778 )
curve = SubResource( 3 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99892, 1.03537, -5.299 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 13 )
mode = "battle"

[node name="GridMap" type="GridMap" parent="."]
transform = Transform( 4, 0, 0, 0, 8, 0, 0, 0, 4, 0, 0, 0 )
mesh_library = ExtResource( 4 )
cell_size = Vector3( 1, 1, 1 )
cell_center_y = false
data = {
"cells": PoolIntArray( 0, 0, 655362, 1, 0, 655362, 2, 0, 655362, 3, 0, 655362, 4, 0, 655362, 5, 0, 655362, 6, 0, 655362, 7, 0, 655362, 8, 0, 655362, 9, 0, 655362, 10, 0, 655362, 11, 0, 1441792, 65524, 0, 1048576, 65525, 0, 655362, 65526, 0, 655362, 65527, 0, 655362, 65528, 0, 655362, 65529, 0, 655362, 65530, 0, 655362, 65531, 0, 655362, 65532, 0, 655362, 65533, 0, 655362, 65534, 0, 655362, 65535, 0, 655362, 0, 1, 655362, 1, 1, 655362, 2, 1, 655362, 3, 1, 655362, 4, 1, 655362, 5, 1, 655362, 6, 1, 655362, 7, 1, 655362, 8, 1, 655362, 9, 1, 655362, 10, 1, 655362, 11, 1, 1441792, 65524, 1, 1048576, 65525, 1, 655362, 65526, 1, 655362, 65527, 1, 655362, 65528, 1, 655362, 65529, 1, 655362, 65530, 1, 655362, 65531, 1, 655362, 65532, 1, 655362, 65533, 1, 655362, 65534, 1, 655362, 65535, 1, 655362, 0, 2, 655362, 1, 2, 655362, 2, 2, 655362, 3, 2, 655362, 4, 2, 655362, 5, 2, 655362, 6, 2, 655362, 7, 2, 655362, 8, 2, 655362, 9, 2, 655362, 10, 2, 655362, 11, 2, 1441792, 65524, 2, 1048576, 65525, 2, 655362, 65526, 2, 655362, 65527, 2, 655362, 65528, 2, 655362, 65529, 2, 655362, 65530, 2, 655362, 65531, 2, 655362, 65532, 2, 655362, 65533, 2, 655362, 65534, 2, 655362, 65535, 2, 655362, 0, 3, 655362, 1, 3, 655362, 2, 3, 655362, 3, 3, 655362, 4, 3, 655362, 5, 3, 655362, 6, 3, 655362, 7, 3, 655362, 8, 3, 655362, 9, 3, 655362, 10, 3, 655362, 11, 3, 1441792, 65524, 3, 1048576, 65525, 3, 655362, 65526, 3, 655362, 65527, 3, 655362, 65528, 3, 655362, 65529, 3, 655362, 65530, 3, 655362, 65531, 3, 655362, 65532, 3, 655362, 65533, 3, 655362, 65534, 3, 655362, 65535, 3, 655362, 0, 4, 655362, 1, 4, 655362, 2, 4, 655362, 3, 4, 655362, 4, 4, 655362, 5, 4, 655362, 6, 4, 655362, 7, 4, 655362, 8, 4, 655362, 9, 4, 655362, 10, 4, 655362, 11, 4, 1441792, 65524, 4, 1048576, 65525, 4, 655362, 65526, 4, 655362, 65527, 4, 655362, 65528, 4, 655362, 65529, 4, 655362, 65530, 4, 655362, 65531, 4, 655362, 65532, 4, 655362, 65533, 4, 655362, 65534, 4, 655362, 65535, 4, 655362, 0, 5, 655360, 1, 5, 655360, 2, 5, 655360, 3, 5, 655360, 4, 5, 655360, 5, 5, 655360, 6, 5, 655360, 7, 5, 655360, 8, 5, 655360, 9, 5, 655360, 10, 5, 655360, 11, 5, 1441793, 65524, 5, 655361, 65525, 5, 655360, 65526, 5, 655360, 65527, 5, 655360, 65528, 5, 655360, 65529, 5, 655360, 65530, 5, 655360, 65531, 5, 655360, 65532, 5, 655360, 65533, 5, 655360, 65534, 5, 655360, 65535, 5, 655360, 0, 65521, 0, 1, 65521, 0, 2, 65521, 0, 3, 65521, 0, 4, 65521, 0, 5, 65521, 0, 6, 65521, 0, 7, 65521, 0, 8, 65521, 0, 9, 65521, 0, 10, 65521, 0, 11, 65521, 1, 65524, 65521, 1048577, 65525, 65521, 0, 65526, 65521, 0, 65527, 65521, 0, 65528, 65521, 0, 65529, 65521, 0, 65530, 65521, 0, 65531, 65521, 0, 65532, 65521, 0, 65533, 65521, 0, 65534, 65521, 0, 65535, 65521, 0, 0, 65522, 655362, 1, 65522, 655362, 2, 65522, 655362, 3, 65522, 655362, 4, 65522, 655362, 5, 65522, 655362, 6, 65522, 655362, 7, 65522, 655362, 8, 65522, 655362, 9, 65522, 655362, 10, 65522, 655362, 11, 65522, 1441792, 65524, 65522, 1048576, 65525, 65522, 655362, 65526, 65522, 655362, 65527, 65522, 655362, 65528, 65522, 655362, 65529, 65522, 655362, 65530, 65522, 655362, 65531, 65522, 655362, 65532, 65522, 655362, 65533, 65522, 655362, 65534, 65522, 655362, 65535, 65522, 655362, 0, 65523, 655362, 1, 65523, 655362, 2, 65523, 655362, 3, 65523, 655362, 4, 65523, 655362, 5, 65523, 655362, 6, 65523, 655362, 7, 65523, 655362, 8, 65523, 655362, 9, 65523, 655362, 10, 65523, 655362, 11, 65523, 1441792, 65524, 65523, 1048576, 65525, 65523, 655362, 65526, 65523, 655362, 65527, 65523, 655362, 65528, 65523, 655362, 65529, 65523, 655362, 65530, 65523, 655362, 65531, 65523, 655362, 65532, 65523, 655362, 65533, 65523, 655362, 65534, 65523, 655362, 65535, 65523, 655362, 0, 65524, 655362, 1, 65524, 655362, 2, 65524, 655362, 3, 65524, 655362, 4, 65524, 655362, 5, 65524, 655362, 6, 65524, 655362, 7, 65524, 655362, 8, 65524, 655362, 9, 65524, 655362, 10, 65524, 655362, 11, 65524, 1441792, 65524, 65524, 1048576, 65525, 65524, 655362, 65526, 65524, 655362, 65527, 65524, 655362, 65528, 65524, 655362, 65529, 65524, 655362, 65530, 65524, 655362, 65531, 65524, 655362, 65532, 65524, 655362, 65533, 65524, 655362, 65534, 65524, 655362, 65535, 65524, 655362, 0, 65525, 655362, 1, 65525, 655362, 2, 65525, 655362, 3, 65525, 655362, 4, 65525, 655362, 5, 65525, 655362, 6, 65525, 655362, 7, 65525, 655362, 8, 65525, 655362, 9, 65525, 655362, 10, 65525, 655362, 11, 65525, 1441792, 65524, 65525, 1048576, 65525, 65525, 655362, 65526, 65525, 655362, 65527, 65525, 655362, 65528, 65525, 655362, 65529, 65525, 655362, 65530, 65525, 655362, 65531, 65525, 655362, 65532, 65525, 655362, 65533, 65525, 655362, 65534, 65525, 655362, 65535, 65525, 655362, 0, 65526, 655362, 1, 65526, 655362, 2, 65526, 655362, 3, 65526, 655362, 4, 65526, 655362, 5, 65526, 655362, 6, 65526, 655362, 7, 65526, 655362, 8, 65526, 655362, 9, 65526, 655362, 10, 65526, 655362, 11, 65526, 1441792, 65524, 65526, 1048576, 65525, 65526, 655362, 65526, 65526, 655362, 65527, 65526, 655362, 65528, 65526, 655362, 65529, 65526, 655362, 65530, 65526, 655362, 65531, 65526, 655362, 65532, 65526, 655362, 65533, 65526, 655362, 65534, 65526, 655362, 65535, 65526, 655362, 0, 65527, 655362, 1, 65527, 655362, 2, 65527, 655362, 3, 65527, 655362, 4, 65527, 655362, 5, 65527, 655362, 6, 65527, 655362, 7, 65527, 655362, 8, 65527, 655362, 9, 65527, 655362, 10, 65527, 655362, 11, 65527, 1441792, 65524, 65527, 1048576, 65525, 65527, 655362, 65526, 65527, 655362, 65527, 65527, 655362, 65528, 65527, 655362, 65529, 65527, 655362, 65530, 65527, 655362, 65531, 65527, 655362, 65532, 65527, 655362, 65533, 65527, 655362, 65534, 65527, 655362, 65535, 65527, 655362, 0, 65528, 655362, 1, 65528, 655362, 2, 65528, 655362, 3, 65528, 655362, 4, 65528, 655362, 5, 65528, 655362, 6, 65528, 655362, 7, 65528, 655362, 8, 65528, 655362, 9, 65528, 655362, 10, 65528, 655362, 11, 65528, 1441792, 65524, 65528, 1048576, 65525, 65528, 655362, 65526, 65528, 655362, 65527, 65528, 655362, 65528, 65528, 655362, 65529, 65528, 655362, 65530, 65528, 655362, 65531, 65528, 655362, 65532, 65528, 655362, 65533, 65528, 655362, 65534, 65528, 655362, 65535, 65528, 655362, 0, 65529, 655362, 1, 65529, 655362, 2, 65529, 655362, 3, 65529, 655362, 4, 65529, 655362, 5, 65529, 655362, 6, 65529, 655362, 7, 65529, 655362, 8, 65529, 655362, 9, 65529, 655362, 10, 65529, 655362, 11, 65529, 1441792, 65524, 65529, 1048576, 65525, 65529, 655362, 65526, 65529, 655362, 65527, 65529, 655362, 65528, 65529, 655362, 65529, 65529, 655362, 65530, 65529, 655362, 65531, 65529, 655362, 65532, 65529, 655362, 65533, 65529, 655362, 65534, 65529, 655362, 65535, 65529, 655362, 0, 65530, 655362, 1, 65530, 655362, 2, 65530, 655362, 3, 65530, 655362, 4, 65530, 655362, 5, 65530, 655362, 6, 65530, 655362, 7, 65530, 655362, 8, 65530, 655362, 9, 65530, 655362, 10, 65530, 655362, 11, 65530, 1441792, 65524, 65530, 1048576, 65525, 65530, 655362, 65526, 65530, 655362, 65527, 65530, 655362, 65528, 65530, 655362, 65529, 65530, 655362, 65530, 65530, 655362, 65531, 65530, 655362, 65532, 65530, 655362, 65533, 65530, 655362, 65534, 65530, 655362, 65535, 65530, 655362, 0, 65531, 655362, 1, 65531, 655362, 2, 65531, 655362, 3, 65531, 655362, 4, 65531, 1441794, 5, 65531, 1441794, 6, 65531, 655362, 7, 65531, 655362, 8, 65531, 655362, 9, 65531, 655362, 10, 65531, 655362, 11, 65531, 1441792, 65524, 65531, 1048576, 65525, 65531, 655362, 65526, 65531, 655362, 65527, 65531, 655362, 65528, 65531, 655362, 65529, 65531, 655362, 65530, 65531, 655362, 65531, 65531, 655362, 65532, 65531, 655362, 65533, 65531, 655362, 65534, 65531, 655362, 65535, 65531, 655362, 0, 65532, 1441794, 1, 65532, 1441794, 2, 65532, 1441794, 3, 65532, 1441794, 4, 65532, 1441794, 5, 65532, 1441794, 6, 65532, 1441794, 7, 65532, 1441794, 8, 65532, 1441794, 9, 65532, 1441794, 10, 65532, 1441794, 11, 65532, 1441792, 65524, 65532, 1048576, 65525, 65532, 1441794, 65526, 65532, 1441794, 65527, 65532, 1441794, 65528, 65532, 1441794, 65529, 65532, 1441794, 65530, 65532, 1441794, 65531, 65532, 1441794, 65532, 65532, 1441794, 65533, 65532, 1441794, 65534, 65532, 1441794, 65535, 65532, 1441794, 0, 65533, 655362, 1, 65533, 655362, 2, 65533, 655362, 3, 65533, 655362, 4, 65533, 655362, 5, 65533, 655362, 6, 65533, 655362, 7, 65533, 655362, 8, 65533, 655362, 9, 65533, 655362, 10, 65533, 655362, 11, 65533, 1441792, 65524, 65533, 1048576, 65525, 65533, 655362, 65526, 65533, 655362, 65527, 65533, 655362, 65528, 65533, 655362, 65529, 65533, 655362, 65530, 65533, 655362, 65531, 65533, 655362, 65532, 65533, 655362, 65533, 65533, 655362, 65534, 65533, 655362, 65535, 65533, 655362, 0, 65534, 655362, 1, 65534, 655362, 2, 65534, 655362, 3, 65534, 655362, 4, 65534, 655362, 5, 65534, 655362, 6, 65534, 655362, 7, 65534, 655362, 8, 65534, 655362, 9, 65534, 655362, 10, 65534, 655362, 11, 65534, 1441792, 65524, 65534, 1048576, 65525, 65534, 655362, 65526, 65534, 655362, 65527, 65534, 655362, 65528, 65534, 655362, 65529, 65534, 655362, 65530, 65534, 655362, 65531, 65534, 655362, 65532, 65534, 655362, 65533, 65534, 655362, 65534, 65534, 655362, 65535, 65534, 655362, 0, 65535, 655362, 1, 65535, 655362, 2, 65535, 655362, 3, 65535, 655362, 4, 65535, 655362, 5, 65535, 655362, 6, 65535, 655362, 7, 65535, 655362, 8, 65535, 655362, 9, 65535, 655362, 10, 65535, 655362, 11, 65535, 1441792, 65524, 65535, 1048576, 65525, 65535, 655362, 65526, 65535, 655362, 65527, 65535, 655362, 65528, 65535, 655362, 65529, 65535, 655362, 65530, 65535, 655362, 65531, 65535, 655362, 65532, 65535, 655362, 65533, 65535, 655362, 65534, 65535, 655362, 65535, 65535, 655362 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[connection signal="battleStart" from="Player" to="." method="_on_Player_battleStart"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
